cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10123_492628778.yaml
Resources:
  awsec2vpcs3flowlogbucket391DB968:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      BucketName: test-cdk-vpc-flow-log-bucket
      VersioningConfiguration:
        Status: Enabled
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc-s3-flow-log-bucket/Resource
  awsec2vpc51E15116:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: false
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: Test-CDK-VPC
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/Resource
  awsec2vpcIngressSubnet1Subnet5E2C7092:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/Subnet
  awsec2vpcIngressSubnet1RouteTable9FE881BF:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/RouteTable
  awsec2vpcIngressSubnet1RouteTableAssociation0123E205:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcIngressSubnet1RouteTable9FE881BF
      SubnetId:
        Ref: awsec2vpcIngressSubnet1Subnet5E2C7092
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/RouteTableAssociation
  awsec2vpcIngressSubnet1DefaultRouteC53FCB8A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: awsec2vpcIngressSubnet1RouteTable9FE881BF
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: awsec2vpcIGW5698AEEE
    DependsOn:
      - awsec2vpcVPCGW1536E68F
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/DefaultRoute
  awsec2vpcIngressSubnet1EIPE057EE40:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/EIP
  awsec2vpcIngressSubnet1NATGateway9FB1472E:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: awsec2vpcIngressSubnet1Subnet5E2C7092
      AllocationId:
        Fn::GetAtt:
          - awsec2vpcIngressSubnet1EIPE057EE40
          - AllocationId
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet1/NATGateway
  awsec2vpcIngressSubnet2Subnet538DC171:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2/Subnet
  awsec2vpcIngressSubnet2RouteTable66C82D59:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2/RouteTable
  awsec2vpcIngressSubnet2RouteTableAssociationF9DF80AD:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcIngressSubnet2RouteTable66C82D59
      SubnetId:
        Ref: awsec2vpcIngressSubnet2Subnet538DC171
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2/RouteTableAssociation
  awsec2vpcIngressSubnet2DefaultRoute98030257:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: awsec2vpcIngressSubnet2RouteTable66C82D59
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: awsec2vpcIGW5698AEEE
    DependsOn:
      - awsec2vpcVPCGW1536E68F
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IngressSubnet2/DefaultRoute
  awsec2vpcApplicationSubnet1Subnet64B7336A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1/Subnet
  awsec2vpcApplicationSubnet1RouteTable2E73D5B6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1/RouteTable
  awsec2vpcApplicationSubnet1RouteTableAssociationCB3BA164:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcApplicationSubnet1RouteTable2E73D5B6
      SubnetId:
        Ref: awsec2vpcApplicationSubnet1Subnet64B7336A
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1/RouteTableAssociation
  awsec2vpcApplicationSubnet1DefaultRoute0E95A478:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: awsec2vpcApplicationSubnet1RouteTable2E73D5B6
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: awsec2vpcIngressSubnet1NATGateway9FB1472E
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet1/DefaultRoute
  awsec2vpcApplicationSubnet2SubnetBDE66C84:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2/Subnet
  awsec2vpcApplicationSubnet2RouteTableEFAF7623:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2/RouteTable
  awsec2vpcApplicationSubnet2RouteTableAssociation871ACB87:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcApplicationSubnet2RouteTableEFAF7623
      SubnetId:
        Ref: awsec2vpcApplicationSubnet2SubnetBDE66C84
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2/RouteTableAssociation
  awsec2vpcApplicationSubnet2DefaultRoute81356547:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: awsec2vpcApplicationSubnet2RouteTableEFAF7623
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: awsec2vpcIngressSubnet1NATGateway9FB1472E
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/ApplicationSubnet2/DefaultRoute
  awsec2vpcRDSSubnet1SubnetAAA22E2B:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.4.0/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: RDS
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet1/Subnet
  awsec2vpcRDSSubnet1RouteTableAFD0057F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet1
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet1/RouteTable
  awsec2vpcRDSSubnet1RouteTableAssociationCA121FB4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcRDSSubnet1RouteTableAFD0057F
      SubnetId:
        Ref: awsec2vpcRDSSubnet1SubnetAAA22E2B
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet1/RouteTableAssociation
  awsec2vpcRDSSubnet2Subnet3518699C:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.4.16/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: RDS
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet2/Subnet
  awsec2vpcRDSSubnet2RouteTableF7CFCE64:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      Tags:
        - Key: Name
          Value: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet2
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet2/RouteTable
  awsec2vpcRDSSubnet2RouteTableAssociation46AFDEA5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: awsec2vpcRDSSubnet2RouteTableF7CFCE64
      SubnetId:
        Ref: awsec2vpcRDSSubnet2Subnet3518699C
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/RDSSubnet2/RouteTableAssociation
  awsec2vpcIGW5698AEEE:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Test-CDK-VPC
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/IGW
  awsec2vpcVPCGW1536E68F:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: awsec2vpc51E15116
      InternetGatewayId:
        Ref: awsec2vpcIGW5698AEEE
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/VPCGW
  awsec2vpcvpcflowlogsFlowLog27FC81E9:
    Type: AWS::EC2::FlowLog
    Properties:
      ResourceId:
        Ref: awsec2vpc51E15116
      ResourceType: VPC
      TrafficType: ALL
      LogDestination:
        Fn::Join:
          - ""
          - - Fn::GetAtt:
                - awsec2vpcs3flowlogbucket391DB968
                - Arn
            - /VPC-Logs
      LogDestinationType: s3
      Tags:
        - Key: Name
          Value: Test-CDK-VPC
    Metadata:
      aws:cdk:path: Testing-CDK-VPC-Stack/aws-ec2-vpc/vpc-flow-logs/FlowLog
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
